--- a/query.css
+++ b/query.css
@@ -7,12 +7,10 @@
     } */
     .about .about-content .left {
         width: 30%;
-        background-color: salmon;
     }
     
     .about .about-content .right {
         width: 62%;
-        background-color: springgreen;
     }
     .about .about-content .left img {
         width: 250px;
@@ -136,12 +134,10 @@
 @media (max-width:840px ) {
     .about .about-content .left {
         width: 30%;
-        background-color: salmon;
     }
     
     .about .about-content .right {
         width: 57%;
-        background-color: springgreen;
     }
     .services .serv-content {
         display: block;
@@ -252,7 +248,12 @@
     .show-more {
         font-size: 1.1rem;
     }
-    
+    .work .work-content {
+        width: 100%;
+        display: block;
+        text-align: center;
+    }
+
     .contact .right form .fields {
         display: block;
     }
@@ -316,13 +317,10 @@
         font-size: 1rem;
     }
     .about .about-content .left img {
-        width: 200px;
-        height: 200px;
+        width: 100%;
+        height: 120px;
         object-fit: fill;
         border-radius: 50%;
-    }
-    .services .serv-content {
-        width: 80%;
     }
     
     .contact .right form .button {
@@ -358,7 +356,14 @@
         font-size: 1.4rem;
     }
     .navbar .logo a {
-        font-size: 1.5rem;
+       
+         font-size: 1.5rem;
+    }
+    .about .about-content .left img {
+        width: 400px;
+        height: 100px;
+        object-fit: fill;
+        border-radius: 50%;
     }
     /* .services .serv-content .card {
         width: 90%;
