--- a/style.css
+++ b/style.css
@@ -560,7 +560,7 @@ footer i:hover {
 .fa-linkedin-in {
     background: #007bb5;
 }
-.fa-instagram{
+.fa-reddit-alien{
     background: #125688;
 }
 .fa-pinterest {
