--- a/query.css
+++ b/query.css
@@ -317,10 +317,12 @@
         font-size: 1rem;
     }
     .about .about-content .left img {
-        width: 100%;
-        height: 120px;
+        width: 100px;
+        height: 100px;
         object-fit: fill;
-        border-radius: 50%;
+        border-radius: 100%;
+        -moz-border-radius: 100%;
+        -webkit-border-radius: 100%
     }
     
     .contact .right form .button {
@@ -359,12 +361,7 @@
        
          font-size: 1.5rem;
     }
-    .about .about-content .left img {
-        width: 200px;
-        height: 100px;
-        object-fit: fill;
-        border-radius: 50%;
-    }
+  
     /* .services .serv-content .card {
         width: 90%;
         margin-left: 5%;
