--- a/query.css
+++ b/query.css
@@ -338,7 +338,14 @@
 
 
 }
-
+@media (max-width:420px) {
+    .home .home-content .text-3 span  {
+        font-size: 1.4rem;
+    }
+    .about .about-content .div .text{
+       font-size: 1rem;
+    }
+}
 @media (max-width:376px) {
     .home {
         height: 60vh;
@@ -355,12 +362,15 @@
         margin: 4px 0;
     } 
     .home .home-content .text-3 span  {
-        font-size: 1.4rem;
+        font-size: 1.3rem;
     }
     .navbar .logo a {
        
          font-size: 1.5rem;
     }
+    .about .about-content .div .text{
+        font-size: 0.9rem;
+     }
   
     /* .services .serv-content .card {
         width: 90%;
@@ -390,4 +400,10 @@
         margin-top: 1rem;
     }
     
+}
+
+@media (max-width:335px) {
+    .home .home-content .text-3 span  {
+        font-size: 1.2rem;
+    }
 }
