--- a/style.css
+++ b/style.css
@@ -195,11 +195,14 @@ section .title:after {
     font-size: 1.6rem;
     font-weight: 500;
     margin: 5px 0;
+    margin-bottom: 1rem;
 }
 .home .home-content .text-2 {
     font-size: 4rem;
     font-weight: 600;
     margin-left: -3px;
+    margin-bottom: 1rem;
+
 }
 .home .home-content .text-3 {
     font-size: 1.6rem;
