--- a/query.css
+++ b/query.css
@@ -1,432 +1,238 @@
-@media (max-width:1200px ) {
-    section {
-        padding: 70px 0;
-    }
-    /* .about .about-content .column {
-        width: 50%;
-    } */
-    /* .about .about-content .left {
-        width: 30%;
-    }
-    
-    .about .about-content .right {
-        width: 62%;
-    }
-    .about .about-content .left img {
-        width: 250px;
-        height: 300px;
-        border-radius: 8px;
-    } */
-    .about .about-content .left img {
-        width: 30%;
-        object-fit: cover;
-        border-radius: 50%;
-        margin-bottom: 0.5rem;
-    }
-    
-}
-@media (max-width:1070px ) {
-    section {
-        padding: 50px 0;
-    }
-    .home .home-content .text-1 {
-        font-size: 1.4rem;
-    }
-    .home .home-content .text-2 {
-        font-size: 3.5rem;
-    }
-    .home .home-content .text-3 {
-        font-size: 1.4rem;
-    } 
-    section .title {
-        font-size: 2.2rem;
-        margin-bottom: 3rem;
-    }
-    section .title:before {
-        width: 160px;
+@media (max-width: 1920px) {
+    .container {
+        width: 85%;
     }
 
-    /* .about .about-content .left img {
-        width: 350px;
-        height: 400px;
-    } */
-  
-    .services .serv-content .card {
-        width: 100%;
-        flex-basis: 32%;
-        height: 250px;
-        border-radius: 6px;
-        padding: 20px 10px;
+    #header {
+        height: 65vh;
+        padding-top: 1%;
     }
 
-    .services .serv-content .card i {
-        font-size: 2.7rem;
+    nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 10%;
     }
 }
 
-@media (max-width:967px ) {
-  
-    .home {
-        height: 90vh;
+@media (max-width: 1024px) {
+    .container {
+        width: 90%;
     }
-    .home .home-content .text-1 {
+
+    #header {
+        padding-top: 2%;
+    }
+
+    .hero {
+        margin: 8rem 0 0 0;
+    }
+
+    .hero h1 {
+        font-size: 1.4rem;
+        margin-bottom: 1.5%;
+    }
+
+    .hero h3 {
+        font-size: 1rem;
+        line-height: 1.5;
+        width: 70%;  
+    }
+
+    .small-boxes {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 2rem;
+        flex-wrap: wrap;
+    }
+
+    .sm-box {
+        flex-basis: 48%;
+        margin-bottom: 2rem;  
+    }
+
+    .red-desktop {
+        display: none;
+    }
+
+    .red-mobile {
+        display: block;
+    }
+
+    
+}
+
+@media (max-width: 767px) {
+
+    .hero {
+        margin: 6rem 0 0 0;
+    }
+
+    /* .nav-link a {
+        margin-left: 1.5rem;
+    } */
+
+    nav .mainMenu {
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: #000;
+        transition: top 1s ease;
+        display: none;
+    }
+
+    nav .mainMenu .closeMenu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+
+    }
+    nav .openMenu {
+        display: block;
+    }
+
+    nav .mainMenu li a {
+        margin: 2rem 0;
+        display: block;
+    }
+
+    #header {
+        padding-top: 2%;
+    }
+
+    .hero h1 {
+        font-size: 1.4rem;
+        margin-bottom: 1.5%;
+    }
+
+    .hero h3 {
+        width: 80%;  
+    }
+
+    #project {
+        margin-top: 5%;
+    }
+
+    #personal {
+        margin-top: 5rem;
+        padding: 1rem 0;
+    }
+
+    #project h1 {
         font-size: 1.2rem;
-        margin: 5px 0;
+        margin: 1.5rem 0;
     }
-    .home .home-content .text-2 {
-        font-size: 2.7rem;
-        margin-left: -3px;
+
+    #project h3 {
+        font-size: 1rem;
     }
-    .home .home-content .text-3 {
+
+    #project p {
+        font-size: 0.9rem;
+    }
+
+    #personal h1 {
         font-size: 1.2rem;
-        margin: 5px 0;
-    } 
-    .home .home-content .text-3 span  {
-        font-size: 2.2rem;
+        margin: 1.5rem 0;
     }
-    .home .home-content a {
-        padding: 10px 30px;
+
+    #visual-experiment h1 {
         font-size: 1.2rem;
+        margin: 1.5rem 0;
     }
-    .max-width {
-        padding: 0 30px;
+
+    #personal h3 {
+        font-size: 1rem;
     }
-    section .title {
-        font-size: 2rem;
-        margin-bottom: 3rem;
+
+    #personal p {
+        font-size: 0.9rem;
     }
-    section .title:before {
-        width: 140px;
+
+    .sm-logo {
+        width: 24%;
     }
+
+    .box-title {
+        width: 27%;
+    }
+
+    #footer {
+        font-size: 0.8rem;
+    }
+    
+}
+
+@media (max-width: 575px){
+
+    .container {
+        width: 85%;
+    }
+
+    #header {
+        height: 60vh;
+        padding-top: 4%;
+    }
+
+    .logo-img {
+        width: 60%;
+    }
+
+    .hero h1 {
+        font-size: 1.2rem;
+        margin-bottom: 4%;
+    }
+
+    .hero {
+        margin: 7rem 0 0 0;
+    }
+
+    .nav-link {
+        display: none;
+    }
+
     .menu-btn {
         display: block;
-        z-index: 999;
-    }
-    
-    .menu-btn i.active:before {
-        content: "\f00d";
     }
 
-    .navbar .menu {
-        position: fixed;
-        background: #111;
-        width: 100%;
-        height: 100vh;
-        left: -100%;
-        top: 0;
-        text-align: center;
-        padding-top: 5rem;
-        transition: all 0.3s linear;
+    .hero h3 {
+        width: 95%; 
+        font-size: 0.9rem; 
     }
-    .navbar .menu.active {
-        left: 0;
-    } 
 
-    .navbar .menu li {
+    .boxes {
         display: block;
     }
-    .navbar .menu li a {
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 1.5rem;
-    }
-    /* .about .about-content .left img {
-        width: 300px;
-        height: 350px;
-    } */
 
-}
-
-@media (max-width:840px ) {
-    /* .about .about-content .left {
-        width: 30%;
+    .box {
+        margin-bottom: 3rem;
     }
-    
-    .about .about-content .right {
-        width: 57%;
-    } */
-    .services .serv-content {
+
+    .sm-logo {
+        width: 18%;
+    }
+
+    .box-title {
+        width: 23%;
+    }
+
+    #project p, #personal p {
+        width: 100%;
+    }
+
+    .small-boxes {
         display: block;
-        width: 70%;
-        margin: 0 auto;
-    }
-    
-    .services .serv-content .card {
-        margin-bottom: 1rem;
-    }
-
-    .contact .contact-content .text{
-         text-align: center; 
-    }
-    .contact .contact-content .column {
-        width: 100%;
-        margin: 0 auto;
-    }
-    .contact .contact-content .column.left {
-        width: 100%;
-        margin-bottom: 1rem;
-    }
-    .contact .contact-content .column.right {
-        width: 100%;
-    }
-
-    .contact .contact-content .left p {
-        text-align: center;
-        width: 100%;
-        margin: auto;
-    }
-}
-@media (max-width:767px ) {
-    
-    .max-width {
-        padding: 0 20px;
-    }
-
-    .home .home-content a {
-        padding: 8px 24px;
-        font-size: 1.2rem;
-    }
-    section .title {
-        font-size: 1.8rem;
-        margin-bottom: 2.4rem;
-    }
-    section .title:before {
-        width: 130px;
-    }
-    /* .about .about-content {
-        text-align: center;
-    }
-    .about .about-content .left {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto 2rem;
-    }
-    .about .about-content .right {
-        flex: 100%;
-    } */
-    .about .about-content .right p {
-        width: 80%; 
-    }
- 
-    footer i {
-        font-size: 1rem;
-        margin-right: 0.2rem;
-        margin-top: 0.7rem;
-    }
- 
-}
-@media (max-width: 630px){
-    .work .work-content {
-        width: 100%;
-        display: block;
-        text-align: center;
-    }
-}
-@media (max-width:574px) {
- 
-    .home {
-        height: 80vh;
-    }
-    .navbar .logo a {
-        font-size: 1.8rem;
-    }
-    .max-width {
-        width: 100%;
-    }
-    section .title {
-        font-size: 1.6rem;
         margin-bottom: 2rem;
     }
-    section .title:before {
-        width: 120px;
-    }
-     section .title:after {
-        font-size: 1rem;
-        bottom: -15px;
-    }
-    
-    .about .about-content .right a {
-        font-size: 1rem;
-    }
-    .about .about-content .right .text {
-        font-size: 1.1rem;
-        font-weight: 600;
-        margin-bottom: 10px;
-    }
-    .about .about-content .right p {
-        width: 90%; 
-    }
-    /* .services .serv-content .card {
-        width: 80%;
-        margin-left: 10%;
-        transform: translate(-10%);
-    } */
-    .skills-content h3 {
-        font-size: 1rem;
-    }
-    .show-more {
-        font-size: 1.1rem;
-    }
-
-
-    .contact .right form .fields {
-        display: block;
-    }
-    .contact .right form .email {
-        margin-left: 0;
-    }
-    .contact .right form .button {
-        margin: 0 auto;
-    }
-
-    footer {
-        font-size: 0.7rem;
-        display: block; 
-        text-align: center; 
-    }
-    footer .share {
-        margin: 0 auto;
-    }
-    
-}
-
-
-
-@media (max-width:487px) {
-    section {
-        padding: 30px 0;
-    }
-    .home {
-        height: 70vh;
-    }
-    .home .home-content .text-1 {
-        font-size: 1.1rem;
-        margin: 4px 0;
-    }
-    .home .home-content .text-2 {
-        font-size: 2.3rem;
-    }
-    .home .home-content .text-3 {
-        font-size: 1.1rem;
-        margin: 4px 0;
-    } 
-    .home .home-content .text-3 span  {
-        font-size: 1.8rem;
-    }
-    .home .home-content a {
-        padding: 8px 24px;
-        font-size: 1rem;
-    }
-    section .title {
-        font-size: 1.4rem;
-        margin-bottom: 1.7rem;
-    }
-    section .title:before {
-        width: 100px;
-    }
-     section .title:after {
-        font-size: 0.8rem;
-        bottom: -13px;
-    }
-    .navbar .menu li a {
-        font-size: 1rem;
-    }
-    /* .about .about-content .left img {
-        width: 100px;
-        height: 100px;
-        object-fit: fill;
-        border-radius: 100%;
-        -moz-border-radius: 100%;
-        -webkit-border-radius: 100%
-    } */
-    
-    .contact .right form .button {
-        height: 40px;
-        width: 150px;
-    }
-    .contact .right form .button button {
-    font-size: 1rem;
-    }
-    .tech {
-        width: 100%;
-    }
-
-    .show-more {
-        width: 50%;
-    }
-    
-
 
 }
-@media (max-width:420px) {
-    .home .home-content .text-3 span  {
-        font-size: 1.4rem;
-    }
-    .about .about-content .div .text{
-       font-size: 1rem;
-    }
-}
-@media (max-width:376px) {
-    .home {
-        height: 60vh;
-    }
-    .home .home-content .text-1 {
-        font-size: 1rem;
-        margin: 4px 0;
-    }
-    .home .home-content .text-2 {
-        font-size: 2rem;
-    }
-    .home .home-content .text-3 {
-        font-size: 1rem;
-        margin: 4px 0;
-    } 
-    .home .home-content .text-3 span  {
-        font-size: 1.3rem;
-    }
-    .navbar .logo a {
-       
-         font-size: 1.5rem;
-    }
-    .about .about-content .div .text{
-        font-size: 0.9rem;
-     }
-  
-    /* .services .serv-content .card {
-        width: 90%;
-        margin-left: 5%;
-        transform: translate(-5%);
-    } */
-    p {
-        font-size: 14px;
-    }
-    .services .serv-content {
-        width: 90%;
-    }
-    .skills-content h3 {
-        font-size: 1rem;
-        font-weight: 600;
-    }
-    .show-more {
-        font-size: 1rem;
-    }
-    .head, .sub-title {
-        font-size: 14px;
-    }
-    ::placeholder {
-        font-size: 14px;
-    }
-    footer .share {
-        margin-top: 1rem;
-    }
-    
-}
 
-@media (max-width:335px) {
-    .home .home-content .text-3 span  {
-        font-size: 1.2rem;
-    }
-    .show-more {
-        width: 70%;
-    }
-}
+
