--- a/style.css
+++ b/style.css
@@ -1,589 +1,244 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
-
-/* font-family: 'Poppins', sans-serif;
-font-family: 'Ubuntu', sans-serif */
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
+}
+
+body {
+    font-family: 'Rubik', sans-serif;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
+h1, h3 {
+    color: #303030;
 }
 
-/* navbar styling */
-.navbar {
-    position: fixed;
-    width: 100%;
-    /* background: crimson; */
-    font-family: 'Ubuntu', sans-serif;
-    padding: 30px 0;
-    transition: all 0.3s ease;
-    z-index: 999;
+#header {
+    background-color: #181821;
+    height: 60vh;
+    text-align: center;
+    color: #fff;
+    padding-top: 2%;
 }
 
-.max-width {
+.container {
+    width: 70%;
+    margin: auto;
+    /* background-color: rgb(240, 173, 173); */
+}
+
+.container-2 {
     width: 90%;
     margin: auto;
-    padding: 0 70px;
+    
 }
 
-.navbar .max-width {
+.container-2 h1 {
+    margin-bottom: 2.5rem;
+}
+
+nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 15%;
 }
 
-.navbar .logo a {
-    color: #fff;
-    font-size: 2.1rem;
-    font-weight: 600;
-    border: 2PX solid wheat;
-    padding: 0 2rem;
-    border-radius: 4px;
-    background-color: rgba(224, 119, 57, 0.219);
-    display: none;
-}
-
-.navbar .logo a span {
-    color: crimson;
-    transition: color 0.3s ease;
-}
-
-.navbar.sticky {
+nav.sticky {
     padding: 15px 0;
-    background: crimson;
+    background-color: #181821;
 }
 
-.navbar.sticky .logo a span {
-    color: #fff;
-}
-.navbar.sticky {
-    padding: 15px 0;
-    background: crimson;
-}
-
-.navbar .menu li {
-    list-style: none;
-    display: inline-block;
-}
-
-.navbar .menu li a {
-    display: block;
-    color: #fff;
-    font-size: 1.1rem;
-    font-weight: 500;
-    margin-left: 25px;
-    transition: color 0.3 ease;
-}
-
-.navbar .menu li a:hover {
-    color: crimson;
-}
-.navbar .menu li:last-of-type a:hover {
-    color: #fff;
-}
-.navbar.sticky .menu li a:hover {
-    color: #fff;
-}
-
-.menu-btn {
+/* .menu-btn {
     color: #fff;
     font-size: 23px;
     cursor: pointer;
     display: none;
+} */
+
+.logo-img {
+    width: 80%;
 }
 
-.scroll-up-btn {
-    position: fixed;
-    height: 45px;
-    width: 42px;
-    background: crimson;
-    right: 30px;
-    bottom: 10px;
-    text-align: center;
-    line-height: 45px;
+/* .nav-link a {
+    text-decoration: none;
+    margin-left: 4rem;
     color: #fff;
-    z-index: 999;
-    font-size: 30px;
-    border-radius: 6px;
-    cursor: pointer;
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s ease;
-}
-.scroll-up-btn.show {
-    bottom: 30px;
-    opacity: 1;
-    pointer-events: auto;
-}
+    font-size: 0.8rem;
+} */
 
-/* all similar section style */
-section .title {
-    text-align: center;
-    position: relative;
-    font-size: 2.5rem;
-    font-weight: 500;
-    margin-bottom: 3.7rem;
-    padding-bottom: 1.1rem;
-    font-family: 'Ubuntu', sans-serif;
-}
-section .title:before {
-    content: '';
-    position: absolute;
-    width: 180px;
-    left: 50%;
-    height: 3px;
-    background-color: crimson;
-    border-radius: 6px;
-    bottom: 0;
-    transform: translateX(-50%);
-}
-section .title:after {
-    position: absolute;
-    font-size: 1.2rem;
-    background-color: crimson;
-    bottom: -17px;
-    left: 50%;
-    transform: translateX(-50%);
-    padding: 8px;
-    background-color: #fff;
-}
-
-/* Home section */
-.home {
+nav .mainMenu {
     display: flex;
-    background:  linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url(img/249600.jpg) no-repeat center;
-    background-size: cover;
-    height: 70vh;
-    color: #fff;
-    font-family: 'Ubuntu', sans-serif ;
-}
-
-/* .hide {
-    overflow: hidden;
+    list-style: none;
     
-} */
-.hide span {
-    display: inline-block;
-    /* transform: translateY(-120%); */
 }
 
-
-/* .hire {
-    opacity: 0;
-} */
-
-
-/* .hide {
-    overflow: hidden;
-}
-.hide a {
-    display: inline-block;
-    transform: translateY(-150%);
-} */
-
-
-.home .home-content .text-1 {
-    font-size: 1.6rem;
-    font-weight: 500;
-    margin: 5px 0;
-    margin-bottom: 1rem;
-}
-.home .home-content .text-2 {
-    font-size: 4rem;
-    font-weight: 600;
-    margin-left: -3px;
-    margin-bottom: 1rem;
-
-}
-.home .home-content .text-3 {
-    font-size: 1.6rem;
-    margin: 5px 0;
-    font-weight: 500;
-} 
-.home .home-content .text-3 span  {
-    font-size: 2.5rem;
-}
-.home .home-content .text-3 span {
-    color: crimson;
-    font-weight: 500;
-}
-.home .home-content a {
-    display: inline-block;
-    background-color: crimson;
-    padding: 12px 35px;
+nav .mainMenu li a {
+    display: inline;
+    margin: 2rem 0 0 4rem;
+    text-decoration: none;
+    text-transform: uppercase;
     color: #fff;
+    font-size: 0.9rem;
+}
+
+nav .mainMenu li a:hover {
+    text-decoration: underline;
+}
+
+nav .openMenu {
     font-size: 1.5rem;
-    margin-top: 1.1rem;
-    border-radius: 6px;
-    transition: all 0.3s ease;
-    border: 2px solid crimson;
-}
-.home .home-content a:hover {
-    color: crimson;
-    background: rgb(245, 245, 245);
-}
-
-
-
-/*  about section */
- section {
-    padding: 100px 0;
-}
-
-.about, .services, .skills, .contact, footer {
-    font-family: 'Poppins', sans-serif;
-}
-
-.about .title:after {
-    content: "Who am I";
-}
-
- .services .serv-content, .contact .contact-content, .work .work-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.about .about-content .left {
-    width: 100%;
-    text-align: center;
-}
-
-.about .about-content .right {
-    width: 100%;
-    text-align: center;
-}
-
-.about .about-content .left img {
-    width: 20%;
-    object-fit: contain;
-    border-radius: 100%;
-    margin-bottom: 1rem;
-}
-
-.about .about-content .right .text {
-    font-size: 1.3rem;
-    font-weight: 600;
-    margin-bottom: 10px;
-    
-}
-
-.about .about-content .right .text span {
-    color: crimson;
-}
-
-.about .about-content .right p {
-    text-align: center;
-    width: 70%;
-    margin: 1rem auto;
-}
-
-.about .about-content .right a {
-    display: inline-block;
-    background-color: crimson;
-    padding: 5px 25px;
-    color: #fff;
-    font-weight: 500;
-    font-size: 1.1rem;
-    margin-top: 1.1rem;
-    border-radius: 6px;
-    transition: all 0.3s ease;
-    border: 2px solid crimson;
-}
-.about .about-content .right a:hover {
-    color: crimson;
-    background: rgb(245, 245, 245);
-}
-
-/* services section */
-
-.services, .work {
-    background: #111;
-    color: #fff;
-}
-
-.services .title:before, .work .title:before {
-    background: #fff;
-}
-
-.services .title:after, .work .title:after {
-    content: "What I do";
-    background: #111;
-    color: crimson;   
-}
-
-.services .serv-content  {
-    overflow: hidden;
-}
-.serv-content .card {
-    display: inline-block;
-}
-
-.services .serv-content .card {
-    width: 100%;
-    flex-basis: 30%;
-    height: 250px;
-    background: #222;
-    text-align: center;
-    border-radius: 6px;
-    padding: 20px 25px;
+    /* margin: 20px; */
+    display: none;
     cursor: pointer;
-    transition: all 0.3s ease;
-}
-.services .serv-content .card:hover {
-    background: crimson;
-    border: 3px solid #fff;
 }
 
-.services .serv-content .card .box {
-    transition: all 0.3s ease;
-}
-.services .serv-content .card:hover .box {
-    transform: scale(1.05);
-}
-
-.services .serv-content .card i {
-    font-size: 3.1rem;
-    color: crimson;
-    transition: color 0.3s ease;
+nav .mainMenu .closeMenu , .icons i {
+    font-size: 2rem;
+    display: none;
+    cursor: pointer;
 }
 
-.services .serv-content .card:hover i {
-    color: #fff;
-}
-
-.services .serv-content .card .text {
-    font-size: 1.2rem;
-    font-weight: 500;
-    margin: 10px 0 7px 0;
-}
-
-/* Skills styling section */
-
-.skills .title:after {
-    content: "What I know";
-}
-
-/* .skills {
-    background: url(img/Group\ 1737.jpg) no-repeat center;
-} */
-
-.skills-content {
+.hero {
+    margin: auto;
     text-align: center;
 }
 
-.skills-content P, h3 {
-    margin-bottom: 1rem;
+.hero h1 {
+    font-size: 2rem;
+    margin-bottom: 2%;
+    line-height: 1.5;
+    color: #fff;
 }
 
-
-/* work styling */
-
-.work .title:after {
-    content: "What I've done";
+.hero h3 {
+    font-size: 1.2rem;
+    line-height: 1.8;
+    color: rgb(219, 219, 219);
+    font-weight: 400;
+    width: 80%;
+    margin: auto;
 }
-.work-content {
+
+.hero p {
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: rgb(223, 223, 223);
+}
+
+/* project section */
+
+#project {
+    margin-top: 3%;
+}
+
+#project h1 {
+    margin-bottom: 2.5rem;
+}
+
+.boxes {
+    display: flex;
+    margin-bottom: 7%;
+}
+
+.box p {
+    margin-top: 1rem;
+    width: 90%;
+    line-height: 1.5;
+}
+
+.box h3 {
+    margin-top: 1rem;
+}
+
+.box-title {
+    width: 20%;
+    margin-top: 1.3rem;
+}
+
+.sm-logo {
+    width: 15%;
+}
+
+.card-img {
+    width: 95%;
+    border-radius: 1%;
+}
+
+/* Personal */
+
+#personal {
+    margin-top: 8rem;
+    background-color: #ececec4f;
+    padding: 3rem 0;
+}
+
+#personal h1 {
+    margin-bottom: 2.5rem;
+}
+
+/* Visual Experiment */
+
+#visual-experiment {
+    /* margin-top: 8rem; */
+    background-color: #4d92ca1a;
+    padding: 2rem 0;
+}
+
+.small-boxes {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 2rem;
 }
 
-.work-content h4 {
-    font-weight: 500;
-}
-.work-content p {
-    color: rgb(182, 182, 182);
-   
-}
-.work-box {
-    /* background-color: rgb(109, 0, 0); */
-    flex-basis: 47%;
-    margin-bottom: 3rem;
-    border-radius: 0 0 6px 6px;
+.red-desktop {
+    display: block;
 }
 
-.work-box img {
+.red-mobile {
+    display: none;
+}
+
+.sm-box {
+    flex-basis: 24%;  
+}
+
+.sm-box-img {
     width: 100%;
-    border-radius: 6px 6px 0 0;
-    transition: all 0.3s linear;
+    border-radius: 0.2rem;
+}
+
+/* contact */
+
+#contact {
+    padding: 2rem 0 5rem 0;
+}
+
+#contact h1 {
+    margin-bottom: 2rem;
+}
+
+.contact-details a {
+    font-weight: 700;
+    font-size: 1.3rem;
+    text-decoration: none;
     margin-bottom: 1rem;
-    cursor: pointer;
+    color: #303030;
+    
 }
 
-.work-box img:hover {
-    transform: scale(1.05);
+.contact-details {
+    margin-top: 2rem;
 }
 
-.show-more {
-    text-align: center;
-    cursor: pointer;
-    font-size: 1.2rem;
-    color: rgb(159, 238, 85);
-    border: 2px solid white;
-    width: 30%;
-    padding: 0.5rem 1rem;
-    margin: 0 auto;
-}
-
-/* contact styling */
-
-.contact .title:after {
-    content: "Get in touch";
-}
-/* .contact .contact-content .column {
-    width: 45%;
-} */
-.contact .contact-content .column.left {
-    width: 35%;
-}
-.contact .contact-content .column.right {
-    width: 60%;
-}
-
-.contact .contact-content .text {
-    font-size: 1.1rem;
-    font-weight: 600;
-    margin-bottom: 0.8rem;
-}
-
-.contact .contact-content .left p {
-    text-align: justify;
-}
-
-.contact .contact-content .left .icons {
-    margin: 10px 0;
-}
-
-.contact .contact-content .row {
-    display: flex;
-    height: 65px;
-    align-items: center;
-}
-
-.contact .contact-content .row .info {
-    margin-left: 30px;
-}
-
-.contact .contact-content .row i {
-    font-size: 1.5rem;
-    color: crimson;
-    margin-right: 0.5rem;
-}
-
-.contact .contact-content .row .info .sub-title {
-    color: #333;
-}
-
-.contact .right form .fields {
-    display: flex;
-}
-
-.contact .right form .field,
-.contact .right form .fields .field {
-    height: 45px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-
-.contact .right form .textarea {
-    height: 80px;
-    width: 100%;
-}
-.contact .right form .name {
-    margin-right: 10px;
-}
-.contact .right form .email {
-    margin-left: 10px;
-}
-.contact .right form .field input,.contact .right form .textarea textarea {
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgray;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 1rem;
-    font-family: 'poppins', sans-serif;
-} 
-
-.contact .right form .textarea textarea {
-    padding-top: 10px;
-    resize: none;
-}
-
-.contact .right form .button {
-    height: 47px;
-    width: 170px;
-}
-
-.contact .right form .button button {
-    width: 100%;
-    height: 100%;
-    border: 2px solid crimson;
-    background: crimson;
+/* footer */
+#footer {
+    background-color: black;
     color: #fff;
-    font-size: 1.2rem;
-    font-weight: 500;
-    border-radius: 6px;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-.contact .right form .button button:hover {
-    color: crimson;
-    background: none;
-}
-
-/* footer styling */
-
-footer {
-    background: #111;
-    padding: 20px 23px;
-    color: #fff;
-    font-size: 0.7rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-footer span:first-of-type {
-    color: crimson;
-}
-footer a {
-    color: #fff;
-}
-footer i {
-    font-size: 1.2rem;
-    background: #333;
-    margin-right: 1rem;
-    padding: 1rem;
-    border-radius: 4px;
-    margin-top: 1rem;
-}
-footer i:hover {
-   opacity: 0.7;
-}
-
-.fa-facebook-f {
-    background: #3b5998;
-}
-.fa-twitter {
-    background: #55acee;
-}
-.fa-linkedin-in {
-    background: #007bb5;
-}
-.fa-reddit-alien{
-    background: #125688;
-}
-.fa-pinterest {
-    background: #cb2027;
+    padding: 1rem 0;
 }
