--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ nav .mainMenu .closeMenu , .icons i {
     border-radius: 1%;
 }
 
+.trans {
+    visibility: hidden;
+}
+
 /* Personal */
 
 #personal {
