--- a/responssive.css
+++ b/responssive.css
@@ -232,7 +232,6 @@
         width: 10%;
     }
 
-
     #project p, #personal p {
         width: 100%;
     }
@@ -241,6 +240,11 @@
         display: block;
         margin-bottom: 2rem;
     }
+
+    .trans {
+        display: none;
+    }
+    
 
 }
 
