--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 26px;
   }
 }
+@media(max-width: 575px) {
+  .gymbuddy {
+    display: none;
+  }
+}
 
 /*--------------------------------------------------------------
 # Navigation Menu
